--- a/public/style.css
+++ b/public/style.css
@@ -33,7 +33,7 @@ body {
     margin-bottom: 35px;
 } 
 
-.containerInicio > button { 
+.containerInicio  button { 
     width: 246px; 
     height: 54px; 
     color: rgba(215, 9, 0, 1); 
@@ -45,7 +45,7 @@ body {
     font-family: 'Recursive', sans-serif;
 }   
 
-.containerInicio > button:hover { 
+.containerInicio  button:hover { 
     cursor: pointer;
 }  
 
