--- a/public/style.css
+++ b/public/style.css
@@ -84,10 +84,10 @@ body {
     display: flex; 
     justify-content: center; 
     align-items: center;  
-    margin-top: 58px; 
+    margin-top: 58px;   
 }  
 
-.perguntas > .pergunta { 
+.perguntas > ul > li > .pergunta { 
     width: 300px; 
     height: 65px; 
     background-color: rgba(255, 255, 255, 1); 
@@ -100,7 +100,7 @@ body {
     border-radius: 5px; 
 } 
 
-.jogo > .perguntas ion-icon { 
+.jogo > .perguntas > ul > li ion-icon { 
     width: 40px; 
     height: 40px; 
     color: rgba(51, 51, 51, 1); 
@@ -111,12 +111,11 @@ body {
     cursor: pointer;
 }
 
-.perguntas > .pergunta > span { 
+.perguntas > ul > li > .pergunta > span { 
     font-size: 16px; 
     font-weight: 700; 
     color: rgba(51, 51, 51, 1);
-}
-
+} 
 
 .jogo > .rodape { 
     width: 100%; 
@@ -129,4 +128,83 @@ body {
     position: fixed;  
     left: 0; 
     bottom: 0; 
+} 
+
+.perguntas > ul > li > .enunciado { 
+    background-color:rgba(255, 255, 212, 1);
+    width: 299px; 
+    height: 131px; 
+    display: flex; 
+    padding-top: 17px; 
+    padding-left: 15px;  
+    border-radius: 5px; 
+    box-shadow: 4px 4px 5px 4px rgba(0, 0, 0, 0.15);
+    position: relative; 
+    display: inline-block;
+} 
+
+.perguntas > ul > li > .enunciado ion-icon { 
+    position: absolute; 
+    bottom: 0; 
+    right: 10px;
+} 
+
+.perguntas > ul > li > .enunciado > .botoes { 
+    position: absolute; 
+    left: 12px; 
+    bottom: 6px; 
+    display: flex; 
+    justify-content: space-between;
+}  
+
+.botoes > button{ 
+    width: 85px;
+    height: 37px; 
+    color: rgba(255, 255, 255, 1); 
+    border-radius: 5px;
+    border: none; 
+    font-size: 13px; 
+    font-weight: 400;
+} 
+
+.botoes > button:hover{ 
+    cursor: pointer;
+}
+
+.botoes #wrong { 
+    background-color: rgba(255, 48, 48, 1); 
+    margin-right: 8px; 
+    word-wrap: break-word; 
+} 
+
+.botoes #maybe { 
+    background-color: rgba(255, 146, 46, 1); 
+    margin-right: 8px; 
+    word-wrap: break-word; 
+} 
+
+.botoes #right { 
+    background-color:rgba(47, 190, 52, 1); 
+} 
+
+.perguntas > ul > li > .perguntaRespondida { 
+    width: 300px; 
+    height: 65px; 
+    background-color: rgba(255, 255, 255, 1); 
+    display: flex; 
+    align-items: center;
+    justify-content: space-between; 
+    padding-left: 18px; 
+    padding-right: 18px; 
+    box-shadow: 4px 4px 5px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 5px; 
+    color: rgba(255, 48, 48, 1); 
+    text-decoration: line-through;  
+    font-weight: 700;
+} 
+
+.perguntas > ul > li > .perguntaRespondida > ion-icon { 
+    width: 30px;
+    height: 30px; 
+    color: rgba(255, 48, 48, 1); 
 }
